# sujal.dev

./: .gitattributes  .gitignore  README.md  pyproject.toml
.github/workflows/: publish.yaml
content/: config.toml  home.md
content/posts/: 01-a-blog-post-about-this-blog-itself.md  02-fixing-ssh-access-to-an-oracle-vps-without-reprovisioning.md  03-creating-a-window-on-wayland-from-scratch-in-pure-python.md
content/posts/waygui/: 03-creating-a-window-on-wayland-from-scratch-in-pure-python.md  waygui.py
docs/: CNAME  index.html
docs/blog/: index.html
docs/more/: index.html
docs/post/a-blog-post-about-this-blog-itself/: index.html
docs/projects/: index.html
docs/static/: style.css
src/: build.py  cli.py  config.toml  index.md  main.py  render.py  server.py
src/fonts/: README.md  font-faces.css.jinja  subset.py
src/include/: README.md  style.css
src/posts/: 01-a-blog-post-about-this-blog-itself.md
src/posts/waygui/: 03-creating-a-window-on-wayland-from-scratch-in-pure-python.md  waygui.py
src/static/: style.css
src/static/css/: main.css.jinja  pygments.css.jinja
src/templates/: base.jinja  blog.jinja  font-faces.css.jinja  home.jinja  index.jinja  style.css.jinja
ssg/: build.py  cli.py  constants.py  markdown.py  reload.js  server.py  utils.py  vfs.py
ssg/fonts/: subset.py
ssg/static/css/: main.css.jinja  pygments.css.jinja
ssg/templates/: base.jinja  blog.jinja  index.jinja  post.jinja  style.css.jinja  two-column.jinja
ssg/templates/css/: main.css.jinja
