[project]
name = "sujaldev-site-builder"
version = "0.1.0"
description = "Static site generator for sujal.dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "flask>=3.1.1",
    "fonttools[woff]>=4.58.5",
    "jinja2>=3.1.6",
    "mistletoe>=1.4.0",
    "tdewolff-minify>=2.20.37",
]
