[project]
name = "ssg"
version = "0.1.0"
description = "Static site generator for sujal.dev"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fonttools[woff]>=4.58.5",
    "jinja2>=3.1.6",
    "mistletoe>=1.4.0",
    "quart>=0.20.0",
    "tdewolff-minify>=2.23.9",
    "watchfiles>=1.1.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project.scripts]
ssg = "ssg.cli:main"

[tool.setuptools.packages.find]
include = ["ssg"]
